--- a/Paper/Supplements_Review.tex
+++ b/Paper/Supplements_Review.tex
@@ -31,9 +31,9 @@
             breaklinks=true}
 \urlstyle{same}  % don't use monospace font for urls
  
-%\usepackage{natbib}
-%\bibliographystyle{References/my_abbrvnat}
-%\setcitestyle{authoryear,open={(},close={)}}
+\usepackage{natbib}
+\bibliographystyle{References/my_abbrvnat}
+\setcitestyle{authoryear,open={(},close={)}}
 
 \usepackage{graphicx,grffile}
 \makeatletter
@@ -117,7 +117,11 @@
             
 
 \end{titlepage}
+\section{Approximation details}
 
+\hypertarget{refs}{}
+
+\bibliography{References/MyLibraryATE}
 \section{Supplement Figures}
 
 \begin{figure}
